add Procedure class...

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ target/
 src/logoparsing/**
 !src/logoparsing/LogoTreeVisitor.java
 !src/logoparsing/SymTable.java
+!src/logoparsing/Procedure.java
